Updated README file

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Hello World!
+## AttachableBehavior
+**Usage and configuration**: Copy the file `AttachableBehavior.php` to your `Model/Behavior` folder.
